Fix search bar not showing on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,13 @@ body,
     background-color: #0F172A !important;
 }
 
+@media (max-width: 766px) {
+    .DocSearch {
+        margin-top: 50px;
+    }
+}
+
+
 main a {
     color: #00D181 !important;
     font-weight: 600 !important;
